docs/v5.3.0/_sources/gallery/experiment/sphere/Qabs_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/Qabs_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_Qabs_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_Qabs_vs_diameter.py:


Sphere: Qabs vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-44



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_Qabs_vs_diameter_001.png
   :alt: Qabs vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_Qabs_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | fused_silica          | calcium               |
    +-----------------------+-----------------------+
    | water                 | gold                  |
    +-----------------------+-----------------------+
    | BAK1                  | copper                |
    +-----------------------+-----------------------+
    | soda_lime_glass       | silicon               |
    +-----------------------+-----------------------+
    | lithium_niobate       | aluminium             |
    +-----------------------+-----------------------+
    | argon                 | iron                  |
    +-----------------------+-----------------------+
    | flint                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | sodium                |
    +-----------------------+-----------------------+
    | germanium             | silver                |
    +-----------------------+-----------------------+
    | air                   | nickel                |
    +-----------------------+-----------------------+
    | crown                 | zinc                  |
    +-----------------------+-----------------------+
    | SF5                   |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | BK7                   |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | ZBLAN                 |                       |
    +-----------------------+-----------------------+

    [<matplotlib.lines.Line2D object at 0x7fa3549618d0>, <matplotlib.lines.Line2D object at 0x7fa354963450>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        TabulatedMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0] * ureg.degree
    )

    source = GaussianSet(
        wavelength=[400, 700] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    silver = TabulatedMaterial(material_name="silver")

    scatterer = SphereSet(
        diameter=np.linspace(1, 800, 300) * ureg.nanometer,
        material=[silver],
        medium=[1],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.221 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_Qabs_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qabs_vs_diameter.ipynb <Qabs_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qabs_vs_diameter.py <Qabs_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qabs_vs_diameter.zip <Qabs_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
