docs/v5.6.1/_sources/gallery/experiment/sphere/Qabs_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/Qabs_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_Qabs_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_Qabs_vs_diameter.py:


Sphere: Qabs vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-44



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_Qabs_vs_diameter_001.png
   :alt: Qabs vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_Qabs_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c0d5850>, <matplotlib.lines.Line2D object at 0x7fe30c0d6490>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        TabulatedMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0] * ureg.degree
    )

    source = GaussianSet(
        wavelength=[400, 700] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    silver = TabulatedMaterial(material_name="silver")

    scatterer = SphereSet(
        diameter=np.linspace(1, 800, 300) * ureg.nanometer,
        material=[silver],
        medium=[1],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.128 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_Qabs_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qabs_vs_diameter.ipynb <Qabs_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qabs_vs_diameter.py <Qabs_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qabs_vs_diameter.zip <Qabs_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
